--- a/front-end/src/styles/Dashboard.scss
+++ b/front-end/src/styles/Dashboard.scss
@@ -15,8 +15,9 @@
     align-items: center;
     transition: all ease 0.3s;
     min-height: 5vh;
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
-      0 2px 6px 2px rgb(60 64 67 / 15%);
+    position: absolute;
+    z-index: 10;
+    width: 100vw;
 
     &-logo {
       display: flex;
@@ -48,7 +49,7 @@
   &-nav-vertical {
     display: flex;
     flex-direction: column;
-    min-height: 92.8vh;
+    min-height: 100vh;
     min-width: 7rem;
     width: 10vw;
     background-color: #790220;
