--- a/front-end/src/styles/Review.scss
+++ b/front-end/src/styles/Review.scss
@@ -38,7 +38,9 @@
       display: flex;
       align-items: center;
       padding-left: 1.5rem;
-      height: 6rem;
+      height: fit-content;
+      max-height: 9rem;
+
       font-size: 1.3rem;
       word-wrap: break-word;
       overflow: scroll;
